--- a/frontend/Community.html
+++ b/frontend/Community.html
@@ -62,6 +62,7 @@
 
 
     <script src="./script/checkJWT.js"></script>
+    <script src="./script/logout.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -133,10 +134,6 @@
                 });
         });
 
-        document.getElementById('delete-jwt').addEventListener('click', () => {
-            document.cookie = 'jwt=; max-age=0; path=/';
-            window.location.href = '/';
-        });
     </script>
 </body>
 
