--- a/frontend/Search.html
+++ b/frontend/Search.html
@@ -58,6 +58,7 @@
     </div>
 
     <script src="./script/checkJWT.js"></script>
+    <script src="./script/logout.js"></script>
     <script>
         async function searchDocuments(query) {
 
